@@ -5,6 +5,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Added
 
+* Check for bullseye security repository
+
 ### Changed
 
 ### Deprecated
